--- a/public/app/index.html
+++ b/public/app/index.html
@@ -5,42 +5,40 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <title>Alpaca - App</title>
     <link rel="shortcut icon" href="/app/favicon.ico">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/??sm.min.css,sm-extend.min.css">
+    <link rel="stylesheet" href="http://m.sui.taobao.org/dist/css/sm.css">
+    <link rel="stylesheet" href="http://m.sui.taobao.org/dist/css/sm-extend.css">
     <link rel="stylesheet" href="http://m.sui.taobao.org/assets/css/demos.css">
 
-    <!-- END THEME STYLES -->
-    <style>
-        .line-right {
-            text-align: right;
-        }
-    </style>
-
-    <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-    <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-    <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/??sm.min.js,sm-extend.min.js' charset='utf-8'></script>
-   <!-- <script type='text/javascript' src='http://m.sui.taobao.org/assets/js/demos.js' charset='utf-8'></script>-->
-    <script type='text/javascript' src="/app/common/js/alpaca-spa-2.0.js"></script>
-
-    <!-- /theme JS files -->
-    <script src="/app/main/main.js" type="text/javascript"></script>
-    <script src="/app/main/controller/index.js" type="text/javascript"></script>
-    <script src="/app/main/controller/auth.js" type="text/javascript"></script>
-    <script>
-        var g_baseUrl = "/";
-        var g_url = "/";
-        $(document).ready(function () {
-            g_url                 = "http://" + window.location.host;
-            g_baseUrl             = g_url + "/app/";
-            Alpaca.Config.baseUrl = "/app/";
-            Alpaca.run("#/main/index/index");
-        });
-    </script>
-
+    <script type='text/javascript' src='http://m.sui.taobao.org/assets/js/zepto.js' charset='utf-8'></script>
+    <script> $.config = {router: false};</script>
+    <script src="/app/common/js/alpaca-spa-2.0.js" type="text/javascript"></script>
 </head>
 <!-- END HEAD -->
 <!-- BEGIN BODY -->
 <body>
+<div class="page-group"></div>
+<script src="http://m.sui.taobao.org//dist/js/sm.js"></script>
+<script src="http://m.sui.taobao.org//dist/js/sm-extend.js"></script>
+<script src="http://m.sui.taobao.org//dist/js/sm-city-picker.js"></script>
+<script src="/app/main/main.js" type="text/javascript"></script>
+<script src="/app/main/controller/index.js" type="text/javascript"></script>
+<script src="/app/main/controller/auth.js" type="text/javascript"></script>
+<script src="/app/main/controller/form.js" type="text/javascript"></script>
+<script src="/app/main/controller/bar.js" type="text/javascript"></script>
+<script src="/app/main/controller/list.js" type="text/javascript"></script>
+<script src="/app/main/controller/infinite.js" type="text/javascript"></script>
+<script src="/app/main/controller/tabs.js" type="text/javascript"></script>
+<script src="/app/main/controller/card.js" type="text/javascript"></script>
+<script>
+    var g_baseUrl = "/";
+    var g_url = "/";
+    $(document).ready(function () {
+        g_url                 = "http://" + window.location.host;
+        g_baseUrl             = g_url + "/app/";
+        Alpaca.Config.baseUrl = "/app/";
+        Alpaca.run("#/main/index/index");
+    });
+</script>
 </body>
 <!-- END BODY -->
 </html>
