--- a/public/app/index.html
+++ b/public/app/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="format-detection" content="telephone=no">
+    
     <title>Alpaca - App</title>
+
     <link rel="shortcut icon" href="/app/favicon.ico">
     <link rel="stylesheet" href="http://m.sui.taobao.org/dist/css/sm.css">
     <link rel="stylesheet" href="http://m.sui.taobao.org/dist/css/sm-extend.css">
