--- a/public/app/index.html
+++ b/public/app/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
-    
+
     <title>Alpaca - App</title>
 
     <link rel="shortcut icon" href="/app/favicon.ico">
@@ -25,6 +25,7 @@
 <script src="http://m.sui.taobao.org//dist/js/sm.js"></script>
 <script src="http://m.sui.taobao.org//dist/js/sm-extend.js"></script>
 <script src="http://m.sui.taobao.org//dist/js/sm-city-picker.js"></script>
+<script src="/app/common/js/md5-min.js" type="text/javascript" ></script>
 <script src="/app/main/main.js" type="text/javascript"></script>
 <script src="/app/main/controller/index.js" type="text/javascript"></script>
 <script src="/app/main/controller/auth.js" type="text/javascript"></script>
