修改后台接口地址

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -57,8 +57,8 @@
         var g_url = "/";      //后端接口根路径
         $(document).ready(function () {
             g_baseUrl             = "http://" + window.location.host + "/admin/";
-            g_url                 = "http://" + window.location.host;
-            //g_url                 = "http://full.tkc8.com";
+            //g_url                 = "http://" + window.location.host;
+            g_url                 = "http://full.tkc8.com";
             Alpaca.Config.baseUrl = "/admin/"; //alpaca-spa根路径
             Alpaca.run("#/main/index/index");
         });
