--- a/public/shake/screen.html
+++ b/public/shake/screen.html
@@ -42,7 +42,7 @@
             </div>
             <div class="con-right">
                 <p class="text">扫描二维码即可参与</p>
-                <img class="ma" src=""/>
+                <img class="ma" src="http://www.baidu.com"/>
                 <div class="setting">
                     <div class="setting-ass">
                         <div class="set-small set00">
