websocket实现文字聊天示例

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -34,6 +34,7 @@
 <script src="/app/main/controller/infinite.js" type="text/javascript"></script>
 <script src="/app/main/controller/tabs.js" type="text/javascript"></script>
 <script src="/app/main/controller/card.js" type="text/javascript"></script>
+<script src="/app/main/controller/chat.js" type="text/javascript"></script>
 <script>
     var g_baseUrl = "/";
     var g_url = "/";
