--- a/public/app/index.html
+++ b/public/app/index.html
@@ -36,12 +36,13 @@
 <script src="/app/main/controller/card.js" type="text/javascript"></script>
 <script src="/app/main/controller/chat.js" type="text/javascript"></script>
 <script>
-    var g_baseUrl = "/";
-    var g_url = "/";
+    var g_baseUrl = "/";  //前端资源根路径（js，css等，在视图模版中使用）
+    var g_url = "/";      //后端接口根路径
     $(document).ready(function () {
-        g_url                 = "http://" + window.location.host;
-        g_baseUrl             = g_url + "/app/";
-        Alpaca.Config.baseUrl = "/app/";
+        g_baseUrl             = "http://" + window.location.host + "/app/";
+        //g_url                 = "http://" + window.location.host;
+        g_url                 = "http://full.tkc8.com";
+        Alpaca.Config.baseUrl = "/app/"; //alpaca-spa根路径
         Alpaca.run("#/main/index/index");
     });
 </script>
