--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -57,7 +57,7 @@
         var g_baseUrl = "/";  //前端资源根路径（js，css等，在视图模版中使用）
         var g_url = "/";      //后端接口根路径
         $(document).ready(function () {
-            g_baseUrl             = "http://" + window.location.host + "/admin/";
+            g_baseUrl             = "/admin/";
             //g_url                 = "http://" + window.location.host;
             g_url                 = "http://full.tkc8.com";
             Alpaca.Config.baseUrl = "/admin/"; //alpaca-spa根路径
