--- a/public/app/index.html
+++ b/public/app/index.html
@@ -24,7 +24,7 @@
 <div class="page-group"></div>
 <script src="http://m.sui.taobao.org//dist/js/sm.js"></script>
 <script src="http://m.sui.taobao.org//dist/js/sm-city-picker.js"></script>
-<script src="/app/common/js/md5-min.js" type="text/javascript" ></script>
+<script src="/app/common/js/md5-min.js" type="text/javascript"></script>
 <script src="/app/main/main.js" type="text/javascript"></script>
 <script src="/app/main/controller/index.js" type="text/javascript"></script>
 <script src="/app/main/controller/auth.js" type="text/javascript"></script>
@@ -39,7 +39,7 @@
     var g_baseUrl = "/";  //前端资源根路径（js，css等，在视图模版中使用）
     var g_url = "/";      //后端接口根路径
     $(document).ready(function () {
-        g_baseUrl             = "http://" + window.location.host + "/app/";
+        g_baseUrl             = "/app/";
         //g_url                 = "http://" + window.location.host;
         g_url                 = "http://full.tkc8.com";
         Alpaca.Config.baseUrl = "/app/"; //alpaca-spa根路径
