--- a/public/app/index.html
+++ b/public/app/index.html
@@ -16,8 +16,6 @@
 
     <script type='text/javascript' src='http://m.sui.taobao.org/assets/js/zepto.js' charset='utf-8'></script>
     <script> $.config = {router: false};</script>
-    <script src="http://www.tkc8.com/test/pic/base64image.js" type="text/javascript"></script>
-    <script src="http://www.tkc8.com/test/pic/exif.js" type="text/javascript"></script>
     <script src="/app/common/js/alpaca-spa-2.0.js" type="text/javascript"></script>
 </head>
 <!-- END HEAD -->
@@ -26,7 +24,8 @@
 <div class="page-group"></div>
 <script src="http://m.sui.taobao.org//dist/js/sm.js"></script>
 <script src="http://m.sui.taobao.org//dist/js/sm-city-picker.js"></script>
-
+<script src="http://www.tkc8.com/test/pic/base64image.js"></script>
+<script src="http://www.tkc8.com/test/pic/exif.js"></script>
 <script src="/app/common/js/md5-min.js" type="text/javascript"></script>
 <script src="/app/main/main.js" type="text/javascript"></script>
 <script src="/app/main/controller/index.js" type="text/javascript"></script>
@@ -39,6 +38,7 @@
 <script src="/app/main/controller/card.js" type="text/javascript"></script>
 <script src="/app/main/controller/chat.js" type="text/javascript"></script>
 <script src="/app/main/controller/ticket.js" type="text/javascript"></script>
+<script src="/app/main/controller/test.js" type="text/javascript"></script>
 <script>
     var g_baseUrl = "/";  //前端资源根路径（js，css等，在视图模版中使用）
     var g_url = "/";      //后端接口根路径
