--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -32,6 +32,16 @@
         }
     </style>
 
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?1828f70f2f2ff974288343bf131faff3";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
     <script src="/admin/common/js/jquery.min.js" type="text/javascript"></script>
     <script src="/admin/common/js/alpaca-spa-2.0.js" type="text/javascript"></script>
 
