添加腾讯对象存储

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -23,6 +23,7 @@
 <body>
 <div class="page-group"></div>
 <script src="http://m.sui.taobao.org//dist/js/sm.js"></script>
+<script src="http://m.sui.taobao.org/dist/js/sm-extend.js"></script>
 <script src="http://m.sui.taobao.org//dist/js/sm-city-picker.js"></script>
 <script src="http://www.tkc8.com/test/pic/base64image.js"></script>
 <script src="http://www.tkc8.com/test/pic/exif.js"></script>
