添加基于腾讯云的图片上传功能

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -65,6 +65,7 @@
     <script src="/admin/main/controller/ws.js" type="text/javascript"></script>
     <script src="/admin/main/controller/form.js" type="text/javascript"></script>
     <script src="/admin/main/controller/wechat.js" type="text/javascript"></script>
+    <script src="/admin/main/controller/photo.js" type="text/javascript"></script>
     <script>
         var g_baseUrl = "/";  //前端资源根路径（js，css等，在视图模版中使用）
         var g_url = "/";      //后端接口根路径
