--- a/public/admin/test.html
+++ b/public/admin/test.html
@@ -13,8 +13,8 @@
 <input id="file-selector" type="file">
 <script src="/admin/common/qcos/cos-js-sdk-v5.js"></script>
 <script>
-    var Bucket = 'tkc8-full-1251560914';
-    var Region = 'ap-chengdu';
+    var Bucket = 'tkc8-test-1251560914';
+    var Region = 'ap-shanghai';
 
     // 初始化实例
     var cos = new COS({
