--- a/public/test-login.html
+++ b/public/test-login.html
@@ -13,6 +13,8 @@
 <body>
 <a href="#/main/index/page1">去Page1(测试登录)</a><br>
 <a href="#/main/index/page2">去Page2(测试其他)</a><br>
+
+<a  rel="https://wx.qq.com" href="https://wx.qq.com/cgi-bin/mmwebwx-bin/webwxcheckurl?requrl=https%3A%2F%2Fmp.weixin.qq.com%2Fmp%2Fprofile_ext%3Faction%3Dhome%26__biz%3DMzA5OTQ2NjEyOQ%3D%3D%26scene%3D124%23wechat_redirect&skey=%40crypt_81383451_8ade5473075030676c08e59360e00095&deviceid=e192987420211693&pass_ticket=GjDlskZMQ8SOCSgvIx%252BcbjSCFf%252BNsVd6cZVQsuLU%252BP3LJxGdM76VoOZm13MPc9is&opcode=2&scene=1&username=@d2c8929ddf9f4289811e103120f2ef64">测试</a>
 <hr>
 <div class="content"></div>
 
