--- a/public/app/index.html
+++ b/public/app/index.html
@@ -28,7 +28,7 @@
 <script src="http://www.tkc8.com/test/pic/base64image.js"></script>
 <script src="http://www.tkc8.com/test/pic/exif.js"></script>
 <script src="/app/common/js/md5-min.js" type="text/javascript"></script>
-<script src="/app/main/main.js" type="text/javascript"></script>
+<script src="/app/main/main.js?v=1.1" type="text/javascript"></script>
 <script src="/app/main/controller/index.js" type="text/javascript"></script>
 <script src="/app/main/controller/auth.js" type="text/javascript"></script>
 <script src="/app/main/controller/form.js" type="text/javascript"></script>
